; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_905.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_905.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [43 x i8] c"[+] . 101_netv.exe Target (adduser mode) \0A\00", align 1
@.str.1 = private unnamed_addr constant [56 x i8] c"[+] . 101_netv.exe Target YourFile.cfg (adduser mode) \0A\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"TARGETS: \0A\00", align 1
@.str.3 = private unnamed_addr constant [50 x i8] c"[+] 1. Win2k SP4 Server English (*) - v5.0.2195 \0A\00", align 1
@.str.4 = private unnamed_addr constant [47 x i8] c"[+] 1. Win2k SP4 Pro English (*) - v5.0.2195 \0A\00", align 1
@.str.5 = private unnamed_addr constant [44 x i8] c"[+] 1. WinXP SP0 Pro. English - v5.1.2600 \0A\00", align 1
@.str.6 = private unnamed_addr constant [48 x i8] c"[+] 1. WinXP SP1 Pro. English (*) - v5.1.2600 \0A\00", align 1
@.str.7 = private unnamed_addr constant [49 x i8] c"[+] 1. WinXP SP1a Pro. English (*) - v5.1.2600 \0A\00", align 1
@.str.8 = private unnamed_addr constant [53 x i8] c"[+] 1. WinXP SP2 Pro. English (*) - v5.1.2600.2180 \0A\00", align 1
@.str.9 = private unnamed_addr constant [51 x i8] c"[+] 1. Win2k3 SP0 Server English (*) - v5.2.3790 \0A\00", align 1
@.str.10 = private unnamed_addr constant [8 x i8] c"NOTE: \0A\00", align 1
@.str.11 = private unnamed_addr constant [58 x i8] c"The exploit mods the netvault's cfg file to add a win32 \0A\00", align 1
@.str.12 = private unnamed_addr constant [71 x i8] c"user:class101 pass:class101 after a restart of the netvault service. \0A\00", align 1
@.str.13 = private unnamed_addr constant [62 x i8] c"A wildcard (*) mean tested working, else, supposed working. \0A\00", align 1
@.str.14 = private unnamed_addr constant [25 x i8] c"A symbol (-) mean all. \0A\00", align 1
@.str.15 = private unnamed_addr constant [36 x i8] c"Compilation msvc6, cygwin, Linux. \0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.3, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.4, i64 0, i64 0))
  %8 = call i32 @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.5, i64 0, i64 0))
  %9 = call i32 @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.6, i64 0, i64 0))
  %10 = call i32 @printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.7, i64 0, i64 0))
  %11 = call i32 @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.8, i64 0, i64 0))
  %12 = call i32 @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.9, i64 0, i64 0))
  %13 = call i32 @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.10, i64 0, i64 0))
  %14 = call i32 @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.11, i64 0, i64 0))
  %15 = call i32 @printf(i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.12, i64 0, i64 0))
  %16 = call i32 @printf(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.13, i64 0, i64 0))
  %17 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.14, i64 0, i64 0))
  %18 = call i32 @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.15, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
